# jumper

./: .gitignore  CLAUDE.md  LOKI_MODE_SPEC.md  README.md  build-install.sh  pyproject.toml
.loki/: CONTINUITY.md
.loki/state/: orchestrator.json
crates/jm-tui/: Cargo.toml
crates/jm-tui/src/: app.rs  cli.rs  events.rs  keyhints.rs  main.rs  text_utils.rs  theme.rs
crates/jm-tui/src/modals/: confirm.rs  help.rs  input.rs  mod.rs  select.rs
crates/jm-tui/src/plugins/: about.rs  clock.rs  mod.rs  notifications.rs  pomodoro.rs  registry.rs  sidebar.rs
crates/jm-tui/src/plugins/jira/: adf.rs  api.rs  board.rs  config.rs  create.rs  detail.rs  mod.rs  models.rs
crates/jm-tui/src/screens/: dashboard.rs  issue_board.rs  mod.rs  people.rs  project_view.rs  review.rs  search.rs  switch.rs  weekly.rs
crates/jm-tui/src/widgets/: mod.rs  toast.rs
docs/design/: INTERACTION-TEST-PLAN.md  JIRA-API-READINESS.md  PHASE0-PROGRESS.md  PHASE0-READINESS.md  PHASE0-UNIT-TESTS.md  QUESTIONS-architecture-1.md  QUESTIONS-architecture-2.md  QUESTIONS-jira-1.md  QUESTIONS-jira-2.md  QUESTIONS-phase0-1.md  QUESTIONS-phase0-2.md  REGRESSION-CHECKLIST.md  REVIEW-agent-implementability.md  REVIEW-api-integration.md  REVIEW-architecture.md  REVIEW-consistency-audit.md  REVIEW-r4-code-spec.md  REVIEW-r4-consistency.md  REVIEW-r4-final-gate.md  REVIEW-r4-flow-trace.md  REVIEW-rust-systems.md  REVIEW-tui-ux.md  REVIEW-v2-concurrency.md  REVIEW-v2-jira-veteran.md  REVIEW-v2-rust-compiler.md  (+16 more)
jm-rs/: Cargo.toml
jm-rs/crates/jm-core/: Cargo.toml
jm-rs/crates/jm-core/src/: config.rs  crosslinks.rs  export.rs  lib.rs
jm-rs/crates/jm-core/src/models/: inbox.rs  journal.rs  mod.rs  person.rs  project.rs
jm-rs/crates/jm-core/src/storage/: mod.rs  search.rs  store.rs
jm-rs/crates/jm-core/tests/: proptest_roundtrip.proptest-regressions  proptest_roundtrip.rs  real_data_roundtrip.rs
tests/: test_edge_cases.py  test_export.py  test_models.py  test_phase7.py  test_plugins.py  test_screens.py  test_search.py  test_storage.py
(+60 files in other folders)
