[package]
name = "jm-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "jm"
path = "src/main.rs"

[dependencies]
jm-core = { path = "../jm-core" }
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
regex = "1"

[dev-dependencies]
tempfile = "3"
