[package]
name = "jm-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "jm"
path = "src/main.rs"

[dependencies]
jm-core = { path = "../jm-core" }
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
regex = "1"

# JIRA plugin dependencies (Phase 1)
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"  # same version as jm-core; needed for serde_yml::from_value() in plugin config deserialization
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
